<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Placeholder</string>
    <string name="button_buy_product">Buy product</string>
    <string name="button_redeem_product">Redeem product</string>
    <string name="button_go_to_dashboard">Go to dashboard</string>
    <string name="button_what_included">What\'s included</string>
    <string name="progress_select_product">Select product</string>
    <string name="progress_confirm_order">Confirm</string>
    <string name="progress_payment">Payment</string>
    <string name="progress_complete_order">Order complete</string>
    <string name="purchase_popup_message">Are you sure you want to close purchase flow?</string>
    <string name="purchase_popup_confirm">Yes</string>
    <string name="purchase_popup_cancel">No</string>
    <string name="purchase_select_product_title">Buy product</string>
    <string name="purchase_text_hours">hours</string>
    <string name="purchase_text_select_product">Select a product</string>
    <string name="progress_text_cards_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="purchase_category1_group_text">Category 1 \n(10-15 years)</string>
    <string name="purchase_category2_group_text">Category 2</string>
    <string name="select_button">Select</string>
    <string name="cancel_button">Cancel</string>
    <string name="change_currency_button">Change currency:</string>
    <string name="popup_text_ok">OK</string>
    <string name="basket_label">Basket</string>
    <string name="total_label">Total</string>
    <string name="basket_button_confirm_order">Confirm order</string>
    <string name="purchase_basket_add_button_text">Add to basket</string>
    <string name="child_type_basket_item">Child</string>
    <string name="confirm_screen_title">Fill out information</string>
    <string name="confirm_name_filed_hint">Full name</string>
    <string name="confirm_email_filed_hint">E-mail</string>
    <string name="confirm_confirm_email_filed_hint">Confirm e-mail</string>
    <string name="confirm_digital_card_label">You are buying a digital card</string>
    <string name="confirm_terms_conditions_label">Terms and conditions</string>
    <string name="confirm_to_payment_button_label">To payment</string>
    <string name="confirm_email_error">Re-type your e-mail</string>
    <string name="confirm_name_error">Re-type your full name</string>
    <string name="navigation_menu_maps_label">Map</string>
    <string name="navigation_menu_attractions_label">Attractions</string>
    <string name="navigation_menu_favourites_label">Favourites</string>
    <string name="navigation_menu_menu_label">Menu</string>
    <string name="side_menu_receive_card">Receive card</string>
    <string name="side_menu_settings">Settings</string>
    <string name="side_menu_how_it_works">How it works</string>
    <string name="side_menu_conditions">Conditions</string>
    <string name="side_menu_discounts">Discounts</string>
    <string name="side_menu_transport">Transport</string>
    <string name="side_menu_faq">FAQ &amp; Help</string>
    <string name="side_menu_cph_card_label">CPH\nCARD</string>
    <string name="cards_overview_get_card_label">Get a Copenhagen Card</string>
    <string name="cards_overview_activate_card_label">Activate card</string>
    <string name="cards_overview_transfer_card_label">Transfer card</string>
    <string name="cards_overview_not_activated_label">Not activated yet</string>
    <string name="cards_overview_activate_question_label">Do you want to activate this card?</string>
    <string name="cards_overview_expired_explanation_label">You always have the possibility to buy a new card if you want to explore more of Copenhagen.</string>
    <string name="cards_overview_buy_new_card_button">Buy a new card</string>
    <string name="cards_overview_card_expired_label">Card expired</string>
    <string name="cards_overview_transferred_explanation_title">You have transferred this card and it can no longer be used on this device.</string>
    <string name="cards_overview_transferred_card_title">Card transferred</string>
    <string name="cards_overview_pending_card_title">Order pending</string>
    <string name="cards_overview_pending_explanation_title_android">Be patient, your order with reference %s is on it’s way.</string>
    <string name="cards_overview_expires_title">Expires</string>
    <string name="cards_overview_active_card_time_prefix">at</string>
    <string name="activate_card_question_label">Are you sure you want to activate this card?</string>
    <string name="activate_card_description_label">Once you have activated your card it can not be undone.</string>
    <string name="activate_card_swipe_label">Swipe to activate</string>
    <string name="activate_card_activated">Your card is activated</string>
    <string name="activate_card_failed">Something went wrong</string>
    <string name="retry_button">Retry</string>
    <string name="close_button">Close</string>
    <string name="attraction_type_art">Art &amp; Design</string>
    <string name="attraction_type_family">Family &amp; Fun</string>
    <string name="attraction_type_history">History</string>
    <string name="attraction_type_royal">Royal</string>
    <string name="attraction_type_sight">Sightseeing tours</string>
    <string name="attraction_type_discount">Discount</string>
    <string name="attraction_type_favorite">Favourites</string>
    <string name="map_location_permission_denied">Location permission has been denied. Location updates are unavailable.</string>
    <string name="map_permission_rationale_location">For correct location update, please confirm the next permission.</string>
    <string name="map_current_position_description">Current position</string>
    <string name="map_search_for_attractions">Search for attraction</string>
    <string name="search_no_results">Sorry we can\'t find what you are looking for</string>
    <string name="map_show_location_title">Show location on map</string>
    <string name="details_opening_hours_label">Opening hours</string>
    <string name="my_favourites_title_label">My favourites</string>
    <string name="messages_title_label">Messages</string>
    <string name="no_favourites_title_label">You have no favourites yet.</string>
    <string name="no_favourites_description_label">Explore the attractions and click on the heart icon to collect your favourites in a list so you can easily find them.\u0020</string>
    <string name="map_location_general_error">Could not find your location</string>
    <string name="app_info_version_label">Version</string>
    <string name="app_info_licensing_button">Licensing</string>
    <string name="side_menu_app_info">App info</string>
    <string name="consent_title_label">Consent title</string>
    <string name="consent_short_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mauris velit, accumsan at ornare in, dignissim et eros.</string>
    <string name="consent_long_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mauris velit, accumsan at ornare in, dignissim et eros. Mauris cursus sagittis nunc vitae commodo. Duis bibendum gravida erat eget cursus. In sapien sem, sagittis dignissim ornare eget, convallis et ex. In hendrerit nunc vel justo elementum, at hendrerit urna egestas :</string>
    <string name="consent_agree_button">I agree</string>
    <string name="consent_disagree_button">I don\'t agree</string>
    <string name="failure_add_attraction_in_favourite">An error occurred during add attraction into favourite list</string>
    <string name="failure_remove_attraction_from_favourite">An error occurred during remove attraction from favourite list</string>
    <string name="receive_button_title">Receive</string>
    <string name="label_first_intro_screen_title">Get the most out of\nyour Placeholder\n App</string>
    <string name="label_first_intro_screen_subtitle">Let’s do a short introduction to our app!</string>
    <string name="button_intro_screen_start_guide">Start guide</string>
    <string name="button_skip">Skip</string>
    <string name="order_complete_label">Order complete</string>
    <string name="order_complete_description">It might take a few minutes until your card(s) is (are) available.</string>
    <string name="order_id_label">Order Id</string>
    <string name="order_reference_label">Order reference</string>
    <string name="order_amount_label">Amount</string>
    <string name="order_currency_label">Currency</string>
    <string name="order_date_label">Date</string>
    <string name="order_activate_label">Remember to activate your card(s) before getting on public transportation</string>
    <string name="go_to_cards_button">Go to cards</string>
    <string name="label_intro_screen_use">Use</string>
    <string name="label_intro_screen_use_description">Use the app/card to get into\nattractions and on public \ntransportation</string>
    <string name="label_intro_screen_use_action">The card is always at hand to show</string>
    <string name="payment_missing_network_message">Network connection missing</string>
    <string name="label_intro_screen_explore">Explore</string>
    <string name="label_intro_screen_explore_descr">Explore all attractions that are included in Copenhagen Card</string>
    <string name="label_intro_screen_favoutires">Favourites</string>
    <string name="label_intro_screen_favoutires_descr">Save your favourite attractions to get an easy overview</string>
    <string name="label_intro_screen_wifi">No wifi needed</string>
    <string name="label_intro_screen_wifi_descr">Once the card is bought / redeemed in the app - it is ready to use at all times \n</string>
    <string name="button_intro_screen_go_to_start">Go to Start screen</string>
    <string name="order_failed_label">Order failed</string>
    <string name="transfer_card_is_ready_label">Ready to transfer card?</string>
    <string name="transfer_scan_qr_label">Scan QR code from your friend’s device.</string>
    <string name="transfer_confirmation_label">Confirmation</string>
    <string name="transfer_your_card_transfered_label">Your card is transferred when you have confirmed.</string>
    <string name="scan_button">Scan</string>
    <string name="receive_ready_card">Ready to receive your card?</string>
    <string name="receive_ask_friend">Ask your friend to scan the QR code.</string>
    <string name="received_when_friend_confirmed">Your card is received when your friend has confirmed.</string>
    <string name="receive_check_id">Check your device id on friend device:</string>
    <string name="btn_receive_go_to_my_cards">Go to my cards</string>
    <string name="receive_step_one">1</string>
    <string name="receive_step_two">2</string>
    <string name="transfer_card_confirmation">Are you sure you want to transfer this card?</string>
    <string name="transfer_card_confirmation_description">Once you have transferred your card it can not be undone.</string>
    <string name="transfer_card_slider">Swipe to transfer</string>
    <string name="transfer_ready_to_scan_label">You’re ready to scan!</string>
    <string name="received_card">You successfully received your Copenhagen Card.</string>
    <string name="scan_camera_location_permission_denied">Camera permission has been denied.\u0020</string>
    <string name="scan_camera_permission_rationale">Camera permission is required to scan QR code.</string>
    <string name="transfer_card_succes_label">Your card is transferred!</string>
    <string name="transfer_failed_label">Transfer card failed</string>
</resources>
