<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.ScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCphCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:layout_marginEnd="24dp"
            android:background="@drawable/drawable_cph_card"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:text="@string/side_menu_cph_card_label"
            android:textAlignment="center"
            android:textAppearance="@style/MuliBlackTextAppearance"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuy"
            style="@style/PlaceholerSideMenButton.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_buy_product"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/btnReceiveCard" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMessage"
                style="@style/PlaceholerSideMenButton.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages_title_label"
                app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
                app:layout_constraintTop_toBottomOf="@+id/btnAppInfo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReceiveCard"
            style="@style/PlaceholerSideMenButton.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_menu_receive_card"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/tvCphCard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAppInfo"
            style="@style/PlaceholerSideMenButton.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_menu_app_info"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/btnBuy" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMessage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWhatsIncluded"
            style="@style/PlaceholerSideMenButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_what_included"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/vDivider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHowItWorks"
            style="@style/PlaceholerSideMenButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_menu_how_it_works"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/btnWhatsIncluded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConditions"
            style="@style/PlaceholerSideMenButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_menu_conditions"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/btnHowItWorks" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDiscounts"
            style="@style/PlaceholerSideMenButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_menu_discounts"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/btnConditions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTransport"
            style="@style/PlaceholerSideMenButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_menu_transport"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/btnDiscounts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFaqAndHelp"
            style="@style/PlaceholerSideMenButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_menu_faq"
            app:layout_constraintEnd_toEndOf="@+id/tvCphCard"
            app:layout_constraintTop_toBottomOf="@+id/btnTransport" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>
