<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drawable_background_activation_failed">

    <ImageView
        android:id="@+id/ivFailedLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_card_activation_failed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvActivateSuccessfulCardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.27"
        android:text="@string/activate_card_failed"
        android:textAlignment="center"
        android:textAppearance="@style/MuliExtraBoldTextAppearance"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFailedLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetryActivation"
        style="@style/ActivationFeedback.Retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:minWidth="155dp"
        android:minHeight="50dp"
        android:text="@string/retry_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActivateSuccessfulCardTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelDialog"
        style="@style/StartScreen.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="false"
        android:minWidth="155dp"
        android:minHeight="50dp"
        android:text="@string/cancel_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRetryActivation" />

</androidx.constraintlayout.widget.ConstraintLayout>
