<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/purchased_card_width"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvActivateCardTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cards_overview_activate_question_label"
        android:textAlignment="center"
        android:textAppearance="@style/MuliExtraBoldTextAppearance"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nicklasslagbrand.placeholder.feature.main.card.PurchasedCardView
        android:id="@+id/pcvCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActivateCardTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnActivateCard"
        style="@style/PlaceholerMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cards_overview_activate_card_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pcvCardView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTransferCard"
        style="@style/PlaceholerTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cards_overview_transfer_card_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnActivateCard" />

    <TextView
        android:id="@+id/tvNotActivatedCardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorCardNotActivated"
        android:paddingLeft="12dp"
        android:paddingTop="3dp"
        android:paddingRight="12dp"
        android:paddingBottom="3dp"
        android:text="@string/cards_overview_not_activated_label"
        android:textAppearance="@style/MuliBlackTextAppearance"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActivateCardTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
